Add clock divider

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 vivado/*
-
+*.out
 ################################################################################
 #### Emacs
 ################################################################################
