Remove assembler (haskell) binary and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,15 @@ cabal.project.local~
 .ghc.environment.*
 #### DO NOT DELETE THIS LINE
 
+# C++ compiled headers
 *.gch
+
+# Binaries
+/bin
+*.out
+
+# Generated files
+*.asmx
+
+# CLion .idea files
+.idea
