Fix URISC's execution bug and verified on Basys 3 (excluding VGA and PS/2)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 vivado/*
 *.out
+*.jou
+*.log
 ################################################################################
 #### Emacs
 ################################################################################
